[package]
name = "tacho"
description = "A prometheus-focused metrics library for Future-aware applications"
version = "0.4.2"
authors = ["Steve Jenson <stevej@buoyant.io>",
           "Oliver Gould <oliver@buoyant.io>"]
repository = "https://github.com/BuoyantIO/tacho"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
hdrsample = { version = "5", default-features = false }
log = "0.3"
ordermap = "0.2.10"
parking_lot = { version = "0.4", default-features = false }
